small code changes